# nmea

./: .rosinstall  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
msg/: avr.msg  gga.msg  hdt.msg  vtg.msg
src/: geometry_msgs_Vector3Stamped_to_vtg.cpp  gga_and_avr_to_tf.cpp  gga_and_vtg_to_tf.cpp  lla.hpp  local_pose_2_5_d.hpp  navsatfix_to_tf.cpp  nmea_builder.cpp  nmea_parser.cpp  origin_acquirer_gga.hpp  origin_acquirer_navsatfix.hpp  sensor_msgs_navsatfix_to_gga.cpp  utilities.cpp  utilities.hpp
