<?xlm version="1.0"?>
<package>
	<name>nmea</name>
	<version>0.0.0</version>
	<description>A library for ROS NMEA messages from a GNSS receiver</description>
	<maintainer email="geoffrey.viola@asirobots.com">geoffrey viola
	</maintainer>
	<author>Geoffrey Viola</author>
	<license>BSD</license>
	<url>none</url>
	<buildtool_depend>catkin</buildtool_depend>
	<buildtool_depend>roscpp</buildtool_depend>
	<buildtool_depend>message_generation</buildtool_depend>
	<build_depend>angles</build_depend>
	<build_depend>cmake_modules</build_depend>
	<build_depend>nmea_msgs</build_depend>
	<build_depend>roslint</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>tf</build_depend>
	<run_depend>angles</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>nmea_msgs</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>tf</run_depend>
	<export>
	</export>
</package>
